--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,12 +17,12 @@ body{
     margin-bottom: 2vh;
 }
 
-.pd-5{
-    padding: 5px;
+.pd{
+    padding: 5px 10px;
 }
 
 #calcBtn{
-    background-color: aqua;
+    background-color: rgb(0, 119, 255);
     cursor:pointer;
     margin-right: 3px;
 }
@@ -33,3 +33,7 @@ body{
     margin-left: 3px;
 }
 
+.bdr{
+    border-radius: 5px;
+    border: none;
+}
